--- a/trainingDiaryFrontend/trainingDiaryFrontend/ClientApp/src/index.html
+++ b/trainingDiaryFrontend/trainingDiaryFrontend/ClientApp/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>trainingDiaryFrontend</title>
-    <base href="/" />
+<head>
+  <meta charset="utf-8" http-equiv="Content-Security-Policy" content="font-src 'self' data:; img-src 'self' data:;"/>
+  <title>trainingDiaryFrontend</title>
+  <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+</head>
   <body>
     <app-root>Loading...</app-root>
   </body>
